--- a/styles/sobre.css
+++ b/styles/sobre.css
@@ -1,2 +1,10 @@
 #Sobre {
+    border-radius: 10px;
+    margin-left: 70px;
+    margin-right: 70px;
+    margin-top: 20px;
+    color: black;
+    background-color: var(--cor8);
+    text-align: center;
+
 }
